--- a/alcoholemialegales.html
+++ b/alcoholemialegales.html
@@ -105,7 +105,7 @@
                               <div class="menu-right-box d-flex align-items-center">
                                  <div class="pbmit-header-button">
                                     <a href="https://formulario.legales.com.co/" target="_blank" class=" pbmit-btn pbmit-btn-global">
-                                       <span class="pbmit-header-button-text-1">Asesorias</span>          
+                                       <span class="pbmit-header-button-text-1">Aplicación servicio de garante</span>          
                                     </a>
                                  </div>
                               </div>
@@ -419,7 +419,7 @@
                         <h2>Consultenos su caso</h2>
                         <p></p>
                         <div class="pbmit-hsanp-btn">
-                                    <a href="derechoinmobiliario.html" class="pbmit-btn pbmit-btn-inline pbmit-btn-inline-hover-white" target="_blank">
+                                    <a href="contact-us.html" class="pbmit-btn pbmit-btn-inline pbmit-btn-inline-hover-white" target="_blank">
                                        <span>Atención personalizada</span>
                                     </a>
                                  </div>
