--- a/derechocivil.html
+++ b/derechocivil.html
@@ -105,7 +105,7 @@
                               <div class="menu-right-box d-flex align-items-center">
                                  <div class="pbmit-header-button">
                                     <a href="https://formulario.legales.com.co/" target="_blank" class=" pbmit-btn pbmit-btn-global">
-                                       <span class="pbmit-header-button-text-1">Asesorias</span>          
+                                       <span class="pbmit-header-button-text-1">Aplicación servicio de garante</span>          
                                     </a>
                                  </div>
                               </div>
@@ -168,8 +168,8 @@
                               <div class="textwidget custom-html-widget">
                                  <div class="pbmit-service-ads">
                                     <h3 class="pbmit-ads-title">Requiere apoyo de un especialista  en DERECHO CIVIL?</h3>
-                                   Solicite una cita ahora
-                                    <h4 class="pbmit-ads-contact"><a href="https://api.whatsapp.com/send?phone=573026231220&text=Hola%21%20Quisiera%20m%C3%A1s%20contratar%20un%20defensor" target="_blank"><span style="    color: #bfb26c;"> +57 302 623 1220</span></a></h4>
+                                  
+                                    <h3 class="pbmit-ads-contact"><a style="color: #fff;" href="contact-us.html" target="_blank"> Solicite una cita ahora</a></h3>
                                  </div>
                               </div>
                            </aside>
@@ -450,7 +450,7 @@
                         <h2>Consultenos su caso</h2>
                         <p></p>
                         <div class="pbmit-hsanp-btn">
-                                    <a href="derechoinmobiliario.html" class="pbmit-btn pbmit-btn-inline pbmit-btn-inline-hover-white" target="_blank">
+                                    <a href="contact-us.html" class="pbmit-btn pbmit-btn-inline pbmit-btn-inline-hover-white" target="_blank">
                                        <span>Atención personalizada</span>
                                     </a>
                                  </div>
