--- a/derechoinmobiliario.html
+++ b/derechoinmobiliario.html
@@ -105,7 +105,7 @@
                               <div class="menu-right-box d-flex align-items-center">
                                  <div class="pbmit-header-button">
                                     <a href="https://formulario.legales.com.co/" target="_blank" class=" pbmit-btn pbmit-btn-global">
-                                       <span class="pbmit-header-button-text-1">Asesorias</span>          
+                                       <span class="pbmit-header-button-text-1">Aplicación servicio de garante</span>          
                                     </a>
                                  </div>
                               </div>
