--- a/faq.html
+++ b/faq.html
@@ -105,7 +105,7 @@
                               <div class="menu-right-box d-flex align-items-center">
                                  <div class="pbmit-header-button">
                                     <a href="https://formulario.legales.com.co/" target="_blank" class=" pbmit-btn pbmit-btn-global">
-                                       <span class="pbmit-header-button-text-1">Asesorias</span>          
+                                       <span class="pbmit-header-button-text-1">Aplicación servicio de garante</span>          
                                     </a>
                                  </div>
                               </div>
@@ -265,10 +265,10 @@
                      </div>
                      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 200 200">
                         <defs>
-                           <path d="M0, 100a100, 100 0 1, 0 200, 0a100, 100 0 1, 0 -200, 0" id="txt-path"></path>
+                          <a href="contact-us"> <path d="M0, 100a100, 100 0 1, 0 200, 0a100, 100 0 1, 0 -200, 0" id="txt-path"></path></a>
                         </defs>
                         <text>
-                           <textPath startOffset="0" xlink:href="#txt-path">- Más información - Más información - Más información</textPath>
+                           <textPath startOffset="0" xlink:href="#txt-path"> <a href="contact-us">- Más información - Más información - Más información </a></textPath>
                         </text>
                      </svg>
                   </div>
@@ -283,7 +283,7 @@
                         <h2>Consultenos su caso</h2>
                         <p></p>
                         <div class="pbmit-hsanp-btn">
-                                    <a href="derechoinmobiliario.html" class="pbmit-btn pbmit-btn-inline pbmit-btn-inline-hover-white" target="_blank">
+                                    <a href="contact-us.html" class="pbmit-btn pbmit-btn-inline pbmit-btn-inline-hover-white" target="_blank">
                                        <span>Atención personalizada</span>
                                     </a>
                                  </div>
