--- a/faq.html
+++ b/faq.html
@@ -104,7 +104,7 @@
                            <div class="pbmit-right-box">
                               <div class="menu-right-box d-flex align-items-center">
                                  <div class="pbmit-header-button">
-                                    <a href="https://formulario.legales.com.co/" target="_blank" class=" pbmit-btn pbmit-btn-global">
+                                    <a href="https://legales.com.co/formlegales/" target="_blank" class=" pbmit-btn pbmit-btn-global">
                                        <span class="pbmit-header-button-text-1">Aplicación servicio de garante</span>          
                                     </a>
                                  </div>
@@ -183,7 +183,7 @@
                                  </h2>
                                  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                    Si, ingrese en este <a href="https://formulario.legales.com.co/" target="_blank"><strong> ENLACE </strong></a> para llenar el formulario APLICACIÓN SERVICIO DE GARANTE.
+                                    Si, ingrese en este <a href="https://legales.com.co/formlegales/" target="_blank"><strong> ENLACE </strong></a> para llenar el formulario APLICACIÓN SERVICIO DE GARANTE.
                                     </div>
                                  </div>
                               </div>
