--- a/derechopenal.html
+++ b/derechopenal.html
@@ -104,7 +104,7 @@
                            <div class="pbmit-right-box">
                               <div class="menu-right-box d-flex align-items-center">
                                  <div class="pbmit-header-button">
-                                    <a href="https://formulario.legales.com.co/" target="_blank" class=" pbmit-btn pbmit-btn-global">
+                                    <a href="https://legales.com.co/formlegales/" target="_blank" class=" pbmit-btn pbmit-btn-global">
                                        <span class="pbmit-header-button-text-1">Aplicación servicio de garante</span>          
                                     </a>
                                  </div>
@@ -168,13 +168,13 @@
                               <div class="textwidget custom-html-widget">
                                  <div class="download">
                                     <div class="item-download">
-                                       <a href="https://formulario.legales.com.co/" target="_blank" rel="noopener noreferrer">
+                                       <a href="https://legales.com.co/formlegales/" target="_blank" rel="noopener noreferrer">
                                           <i class="pbminfotech-base-icons pbmit-base-icon-doc"></i> Llene este formulario
                                           <i class="pbminfotech-base-icons pbmit-righticon  pbmit-base-icon-check-mark"></i>
                                        </a>
                                     </div>
                                     <!-- <div class="item-download">
-                                       <a href="https://formulario.legales.com.co/" target="_blank" rel="noopener noreferrer">
+                                       <a href="https://legales.com.co/formlegales/" target="_blank" rel="noopener noreferrer">
                                           <i class="pbminfotech-base-icons pbmit-base-icon-doc"></i> Llene este formulario
                                           <i class="pbminfotech-base-icons pbmit-righticon  pbmit-base-icon-check-mark"></i>
                                        </a>
