--- a/index.html
+++ b/index.html
@@ -1222,7 +1222,8 @@
                         <div class="pbmit-contact-widget-lines">
                            <div class="pbmit-contact-widget-line widget-address"><a href="mailtohello@legales.com.co" style="color: #fff;"> hello@legales.com.co</a></div>
                            <div class="pbmit-contact-widget-line widget-phone"><a href="tel:302 623 1220" style="color: #fff;">302 623 1220</a> </div>
-                           <div class="pbmit-contact-widget-line widget-phone"><a href="" style="color: #fff;">Centro comercial y empresarial Obelisco P H Carrera 74 # 48-37 oficina 329.<br> Barrio Laureles Estadio, Medellín, Colombia</a> </div>
+                           <div class="pbmit-contact-widget-line widget-phone"><a href="" style="color: #fff;">Barrio el Poblado - Medellín, Colombia</a> </div>
+                           <div class="pbmit-contact-widget-line widget-phone"><a href="https://maps.app.goo.gl/WtZVYQCngREAvzPb6" style="color: #fff;">Como llegar?</a> </div>
                         </div>
                      </div>
                   </div>
@@ -1235,7 +1236,7 @@
                   <div class="row align-items-center">
                      <div class="col-md-6">
                         <div class="pbmit-footer-copyright-text-area"> Copyright ©LEGALES 2023,  una marca de REALTY & LEGAL INDUSTRY S.A.S, Todos los derechos reservados. desarrollado por
-                           <a href="https://www.buckapi.us" target="_blank">Buckapi</a>
+                          <a href="https://www.buckapi.com" target="_blank">Buckapi</a>
                         </div>
                      </div>
                      <div class="col-md-2">
