--- a/index.html
+++ b/index.html
@@ -124,18 +124,25 @@
                               </nav>
                            </div>
                            
-                           <div class="pbmit-right-box">
+                           <!-- <div class="pbmit-right-box">
                               <div class="menu-right-box d-flex align-items-center">
                                  <div class="pbmit-header-button">
-                                    <a href="https://legales.com.co/formlegales/" target="_blank" class=" pbmit-btn pbmit-btn-global">
+                                    <a href="https://legales.com.co/formlegales/" class=" pbmit-btn pbmit-btn-global">
                                        <span class="pbmit-header-button-text-1">Aplicación servicio de garante</span>          
                                     </a>
                                  </div>
                               </div>
+                           </div> -->
+                           <div class="pbmit-header-button1">
+                              <a href="https://legales.com.co/formlegales/" target="_blank" class="pbmit-btn1 pbmit-btn-global1">
+                                 <span class="pbmit-header-button1-text-1">Aplicación servicio de garante</span>
+                                 <i class="fa fa-inbox"></i>
+                              </a>
                            </div>
-                           <button type="button" style="font-size: 24px; background-color: #198754; color: #ffffff; width: 60px; height: 60px; border-radius: 50%;"> 
+                            <!-- <button type="button" style="font-size: 24px; background-color: #198754; color: #ffffff; width: 60px; height: 60px; border-radius: 50%;"> 
                              <a href="https://api.whatsapp.com/send?phone=573026231220&text=Hola%21%20Quisiera%20m%C3%A1s%20contratar%20un%20defensor" target="_blank" style="color: #f8f9fa;    font-size: 28px;"> <i class="fa fa-whatsapp"></i></a>
-                           </button>
+                           </button> -->
+                           
                         </div>
                      </div>
                   </div>
